--- a/qaoa.ipynb
+++ b/qaoa.ipynb
@@ -788,6 +788,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### load & preprocess data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 330,
    "metadata": {},
@@ -814,62 +821,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 424,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def draw_reg(reg):\n",
-    "    reg.draw(\n",
-    "        blockade_radius=Chadoq2.rydberg_blockade_radius(1.0),\n",
-    "        draw_graph=True,\n",
-    "        draw_half_radius=True\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 422,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# configure QAOA parameters\n",
-    "LAYERS = 5\n",
+    "# preprocessing\n",
     "\n",
-    "def get_seq(coords):\n",
-    "    \"\"\"Returns configured sequence\"\"\"\n",
-    "    coords = np.array(coords)\n",
-    "    \n",
-    "    reg = Register.from_coordinates(coords)\n",
-    "    # draw_reg(reg)\n",
-    "    \n",
-    "    seq = Sequence(reg, Chadoq2)\n",
-    "    seq.declare_channel('ch0', 'rydberg_global')\n",
-    "\n",
-    "    beta_list = seq.declare_variable('beta_list', size=LAYERS)\n",
-    "    gamma_list = seq.declare_variable('gamma_list', size=LAYERS)\n",
-    "\n",
-    "    for beta, gamma in zip(beta_list, gamma_list):\n",
-    "        beta_pulse = Pulse.ConstantPulse(1000*beta, 1.0, 0.0, 0.0)\n",
-    "        gamma_pulse = Pulse.ConstantPulse(1000*gamma, 0.0, 1.0, 0.0)\n",
-    "\n",
-    "        seq.add(beta_pulse, 'ch0')\n",
-    "        seq.add(gamma_pulse,'ch0')\n",
-    "\n",
-    "    seq.measure('ground-rydberg')\n",
-    "    return seq"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 409,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "scaler = StandardScaler()\n",
     "pca = PCA(n_components=2)\n",
     "\n",
     "\n",
     "def get_closest_furthest(points):\n",
+    "    # returns closest distance between points and furthest distance from origin (0,0)\n",
     "    closest_distance = np.inf\n",
     "    furthest_distance = 0\n",
     "\n",
@@ -885,6 +848,7 @@
     "    return closest_distance, furthest_distance\n",
     "\n",
     "def coords_are_ok(points):\n",
+    "    # returns ok if furthest and closest distance are fit in the constrains\n",
     "    closest_distance, furthest_distance = get_closest_furthest(points)\n",
     "    # print(f'Closest distance: {closest_distance}, furthest distance: {furthest_distance}')\n",
     "    if closest_distance > 4 and furthest_distance < 50:\n",
@@ -893,7 +857,13 @@
     "        return False\n",
     "\n",
     "def get_features(prot):\n",
-    "    \"\"\"Extract x,y,z, reduce dimensions. Crop protein to limit to 100 nodes\"\"\"\n",
+    "    \"\"\"\n",
+    "    0. crop protein to limit to 100 nodes\n",
+    "    1. extract x,y,z\n",
+    "    2. standardize protein \n",
+    "    3. convert data to 2D using PCA\n",
+    "    4. prepare_coords - fit data into constrains\n",
+    "    \"\"\"\n",
     "    prot = prot.head(100)\n",
     "\n",
     "    prot = prot[['x','y','z']]\n",
@@ -904,6 +874,7 @@
     "    return prot\n",
     "\n",
     "def prepare_coords(prot):\n",
+    "    # (scales and removes close points in order to fit data into constrains)\n",
     "    _,furthest_distance = get_closest_furthest(prot)\n",
     "    expand_factor = 50/furthest_distance\n",
     "    prot = [c*expand_factor for c in prot]\n",
@@ -911,16 +882,13 @@
     "    #shrink one iteration\n",
     "    shrink_factor = 0.99999\n",
     "    prot = [c*shrink_factor for c in prot]\n",
-    "    # while True:\n",
-    "    #     prot = [c*shrink_factor for c in prot]\n",
-    "    #     if coords_are_ok(prot, closest_cond=False, furthest_cond=True):\n",
-    "    #         break\n",
     "\n",
     "    prot = remove_close_coordinates(prot)\n",
     "    assert coords_are_ok(prot)\n",
     "    return prot\n",
     "\n",
     "def remove_close_coordinates(coordinates):\n",
+    "    # remove coordinates iteratively until coords_are_ok is True => coordinates fit into contraints\n",
     "    new_coordinates = coordinates.copy()\n",
     "    while not coords_are_ok(new_coordinates):\n",
     "        new_coordinates = remove_one_pair(new_coordinates)\n",
@@ -9696,6 +9664,9 @@
     }
    ],
    "source": [
+    "# Create graphs (not necessary to run)!\n",
+    "\n",
+    "\n",
     "# synthetic data\n",
     "np.random.seed(123) # for reproducebility\n",
     "# D0 = np.random.random((10, 5, 2))*80\n",
@@ -9704,9 +9675,6 @@
     "\n",
     "# labels = np.array([1 for _ in range(10)] + [0 for _ in range(10)])\n",
     "labels = np.array([1 for _ in D1] + [0 for _ in D0])\n",
-    "\n",
-    "# D0 = data[:10]\n",
-    "# D1 = data[10:]\n",
     "\n",
     "G0 = []\n",
     "G1 = []\n",
@@ -9717,6 +9685,53 @@
     "        G0.append(G)\n",
     "    else:\n",
     "        G1.append(G)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Configure QAOA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def draw_reg(reg):\n",
+    "    reg.draw(\n",
+    "        blockade_radius=Chadoq2.rydberg_blockade_radius(1.0),\n",
+    "        draw_graph=True,\n",
+    "        draw_half_radius=True\n",
+    "    )\n",
+    "    \n",
+    "# configure QAOA parameters\n",
+    "LAYERS = 5\n",
+    "\n",
+    "def get_seq(coords):\n",
+    "    \"\"\"Returns configured sequence\"\"\"\n",
+    "    coords = np.array(coords)\n",
+    "    \n",
+    "    reg = Register.from_coordinates(coords)\n",
+    "    # draw_reg(reg)\n",
+    "    \n",
+    "    seq = Sequence(reg, Chadoq2)\n",
+    "    seq.declare_channel('ch0', 'rydberg_global')\n",
+    "\n",
+    "    beta_list = seq.declare_variable('beta_list', size=LAYERS)\n",
+    "    gamma_list = seq.declare_variable('gamma_list', size=LAYERS)\n",
+    "\n",
+    "    for beta, gamma in zip(beta_list, gamma_list):\n",
+    "        beta_pulse = Pulse.ConstantPulse(1000*beta, 1.0, 0.0, 0.0)\n",
+    "        gamma_pulse = Pulse.ConstantPulse(1000*gamma, 0.0, 1.0, 0.0)\n",
+    "\n",
+    "        seq.add(beta_pulse, 'ch0')\n",
+    "        seq.add(gamma_pulse,'ch0')\n",
+    "\n",
+    "    seq.measure('ground-rydberg')\n",
+    "    return seq"
    ]
   },
   {
@@ -9778,6 +9793,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Minimize cost function"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 423,
    "metadata": {},
@@ -9826,7 +9848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 425,
    "metadata": {},
    "outputs": [
     {
@@ -9836,7 +9858,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Ilja\\Documents\\EPIQEK\\qaoa.ipynb Cell 26\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Ilja/Documents/EPIQEK/qaoa.ipynb#X33sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m optimal_count_dict \u001b[39m=\u001b[39m quantum_loop(params[np\u001b[39m.\u001b[39;49margmin(scores)])\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Ilja/Documents/EPIQEK/qaoa.ipynb#X33sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m plot_distribution(optimal_count_dict)\n",
+      "\u001b[1;32mc:\\Users\\Ilja\\Documents\\EPIQEK\\qaoa.ipynb Cell 28\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Ilja/Documents/EPIQEK/qaoa.ipynb#X33sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# show optimal pulse sequence parameters\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Ilja/Documents/EPIQEK/qaoa.ipynb#X33sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m optimal_count_dict \u001b[39m=\u001b[39m quantum_loop(params[np\u001b[39m.\u001b[39;49margmin(scores)])\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Ilja/Documents/EPIQEK/qaoa.ipynb#X33sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m plot_distribution(optimal_count_dict)\n",
       "File \u001b[1;32mc:\\Users\\Ilja\\Documents\\EPIQEK\\.conda\\Lib\\site-packages\\numpy\\core\\fromnumeric.py:1325\u001b[0m, in \u001b[0;36margmin\u001b[1;34m(a, axis, out, keepdims)\u001b[0m\n\u001b[0;32m   1238\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m   1239\u001b[0m \u001b[39mReturns the indices of the minimum values along an axis.\u001b[39;00m\n\u001b[0;32m   1240\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1322\u001b[0m \u001b[39m(2, 1, 4)\u001b[39;00m\n\u001b[0;32m   1323\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m   1324\u001b[0m kwds \u001b[39m=\u001b[39m {\u001b[39m'\u001b[39m\u001b[39mkeepdims\u001b[39m\u001b[39m'\u001b[39m: keepdims} \u001b[39mif\u001b[39;00m keepdims \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m np\u001b[39m.\u001b[39m_NoValue \u001b[39melse\u001b[39;00m {}\n\u001b[1;32m-> 1325\u001b[0m \u001b[39mreturn\u001b[39;00m _wrapfunc(a, \u001b[39m'\u001b[39;49m\u001b[39margmin\u001b[39;49m\u001b[39m'\u001b[39;49m, axis\u001b[39m=\u001b[39;49maxis, out\u001b[39m=\u001b[39;49mout, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwds)\n",
       "File \u001b[1;32mc:\\Users\\Ilja\\Documents\\EPIQEK\\.conda\\Lib\\site-packages\\numpy\\core\\fromnumeric.py:56\u001b[0m, in \u001b[0;36m_wrapfunc\u001b[1;34m(obj, method, *args, **kwds)\u001b[0m\n\u001b[0;32m     54\u001b[0m bound \u001b[39m=\u001b[39m \u001b[39mgetattr\u001b[39m(obj, method, \u001b[39mNone\u001b[39;00m)\n\u001b[0;32m     55\u001b[0m \u001b[39mif\u001b[39;00m bound \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m---> 56\u001b[0m     \u001b[39mreturn\u001b[39;00m _wrapit(obj, method, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwds)\n\u001b[0;32m     58\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m     59\u001b[0m     \u001b[39mreturn\u001b[39;00m bound(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwds)\n",
       "File \u001b[1;32mc:\\Users\\Ilja\\Documents\\EPIQEK\\.conda\\Lib\\site-packages\\numpy\\core\\fromnumeric.py:45\u001b[0m, in \u001b[0;36m_wrapit\u001b[1;34m(obj, method, *args, **kwds)\u001b[0m\n\u001b[0;32m     43\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m:\n\u001b[0;32m     44\u001b[0m     wrap \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m---> 45\u001b[0m result \u001b[39m=\u001b[39m \u001b[39mgetattr\u001b[39;49m(asarray(obj), method)(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwds)\n\u001b[0;32m     46\u001b[0m \u001b[39mif\u001b[39;00m wrap:\n\u001b[0;32m     47\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(result, mu\u001b[39m.\u001b[39mndarray):\n",
@@ -9845,6 +9867,7 @@
     }
    ],
    "source": [
+    "# show optimal pulse sequence parameters\n",
     "optimal_count_dict = quantum_loop(params[np.argmin(scores)])\n",
     "plot_distribution(optimal_count_dict)"
    ]
